Solved unloaded google font issue for the first round. Google fonts are not downloaded until it has been called. Created an invisible div to force load google fonts

--- a/puttyPoodle.beta/style.css
+++ b/puttyPoodle.beta/style.css
@@ -113,3 +113,9 @@ html{
 body{
   background-color: #4BDAE3
 }
+
+#hidden-font-loader {
+  font-family: 'Gloria Hallelujah';
+  display: none;
+  color: #4BDAE3;
+}
